assets/css/rtl-basic-mobile.css
@charset "UTF-8";
/* CSS Document */

body
{
    background:#efefef!important;
direction: rtl;
    unicode-bidi: embed;
}


a:hover
{
    color: #46b1cd;
}

a 
{
    color: #46b1cd;
    text-decoration: none;
}

a:link
{
    color: #46b1cd;
}

.esig-sitename
{
    text-shadow: none;
}

.navbar-inverse .navbar-brand 
{
    color: #fff;
    letter-spacing: .1em;
}

.first-page
{
    margin-top: 58px;

}

.navbar-brand 
{
    padding: 25px 15px;
    text-shadow: none;
    color: #efefef!important;
}

.navbar-brand .logo
{
    height:30px;
}

.signer-header
{
    background: #23282e;
    width: 100%;
    color: #fefefe;
    overflow: hidden;
    z-index: 200;
    position: relative;	
}

.navbar-header 
{
    display:inline ;
    float:left ; 
}

.document-sign-page
{
    left:auto;
    padding-right:30px;
    direction: rtl;
}

.doc-name
{
    float: left;
    font-size: 18px;
    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    padding-top: 5px;
    letter-spacing: .1em;
}

.doc_page
{
    width:780px;
    background-color: white;
    box-shadow: 0px 1px 1px #AAA;
    margin-bottom: 84px;
    padding-bottom:2em;
    min-height:600px;
    direction: rtl;
}
#an-admin{
    position: relative;
    right: -500px;    
}  

.doc_page .post-password-form
{
    width: 200px;
    margin: 70px auto;
}

.doc_page .post-password-form label input
{
    display: block;
    width: 100%;
    height: 34px;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background:#fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}	

.doc_page .post-password-form label input:hover
{
    background-color: #fff;
    background: #fff;
}

.doc_page .post-password-form p
{
    font-size: 12px;
}

.doc_page .post-password-form input
{
    font-weight: 300;
    font-size: 15px;
    font-family: "Proxima Nova", Arial, Helvetica, sans-serif;
    border-radius: 2px;
    background: #e9573f;
    border: transparent;
    text-transform: capitalize;
    margin-right: 0;
    background-color: #e9573f;
    color: #fff;
    padding: 6px;
    width: 100%;
    margin: 3px 0;
}

.doc_page .post-password-form input:hover
{
    background-color: #dc3519;	
    background: #dc3519;
}

.document_id
{
    display:none ; 
    position : relative ; 
    float:left ; 
    width:80% ; 
}



.document_date 
{
    display:none ; 
    position : relative ; 
    float:left ; 
    width:20% ; 
}

.signed_on 
{
    display:none ; 
    margin-top:8px ; 
}
/*
#signature-wrapper
{
    float: right;
}*/

#doc_title
{
    text-align: right;
}

.doc-terms
{
    text-shadow: 0px 1px 1px #000;
    color:#46b1cd!important;
}

.doclogo-right 
{
    padding: 10px;
    float:left ; 
    display:inline ; 
}

.sign-arrow{
    position:absolute;
    width: 80px;
    height: 70px;
    top:30%;
    right:-14px;
    -ms-transform: rotate(180deg);
    -webkit-transform: rotate(180deg); 
    transform: rotate(180deg);
}

.rtl-signature-meta
{
    position:relative; 
    
}


.signature-wrapper-displayonly-signed{
    position:relative; 
    
}

.icon-success-check{
    position:relative; 
    left:230px !important;   
}

.footer-btn
{
    padding: 13px;
}



.footer-agree
{
    background: #23282e;
    width: 100%;
    color: #fefefe;
    position: fixed;
    z-index: 200;
    padding: 15px;
    bottom:0;
}

#esig-iam
{
    font-size: 16px;
    text-decoration: none;
    color: #efefef;	
}

.agree-text
{
    font-size: 16px;
    text-decoration: none;
    color: #efefef;	
}

.agree-container
{
    margin-right: 5px;
    margin-left: 0;
    padding: 28px 12px 12px 12px;
}

.agree-button
{
    color: white!important;
    display:inline-block;
    font-size:16px;
    letter-spacing: .05em;
    text-decoration:none!important;
    border: none;
    border-top: solid 1px #95cfe7;
    background: #5ab8dd;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5ab8dd', endColorstr='#2ba3d3');
    background: -moz-linear-gradient(top, #5ab8dd, #2ba3d3);
    background: -webkit-gradient(linear, left top, left bottom, from(#5ab8dd), to(#2ba3d3));
    -webkit-box-shadow: 0px 1px 1px #557280;
    -moz-box-shadow: 0px 1px 1px #557280;
    box-shadow: 0px 1px 1px #557280;
    text-shadow: 0px 1px 1px #315D6D;
    font-weight: 700;
    padding: 15px 35px 15px 32px;
    border-radius: 3px;
}

.agree-button:hover
{
    color:#fff;
    text-decoration:none;	
}

.agree-button.disabled
{
    cursor:default;
    border-top: 1px solid #b5b5b6;
    background: #6d6d6f;
    background: -webkit-gradient(linear, left top, left bottom, from(#8e8e8f), to(#6d6d6f));
    background: -webkit-linear-gradient(top, #8e8e90, #6d6d6f);
    background: -moz-linear-gradient(top, #8e8e90, #6d6d6f);
    background: -ms-linear-gradient(top, #8e8e90, #6d6d6f);
    background: -o-linear-gradient(top, #8e8e90, #6d6d6f);
    padding: 15px 35px 15px 32px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
    box-shadow: rgba(0,0,0,1) 0 1px 0;
    text-shadow: rgba(0,0,0,.4) 0 -1px 0;
    color: #aaaaaa!important;
    text-decoration:none!important;
    font-size: 16px;
    font-weight: 700;
    letter-spacing: .05em;
    font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;
    text-decoration: none;
    vertical-align: middle;
}

.doc_page input[type="button"], .doc_page input[type="submit"]{}

.esig-template-page .sign-form label.error
{
    color:#c00;
}
/* ... */

